deployments/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingressroute
  namespace: immich
spec:
  routes:
  - kind: Rule
    match: Host(`immich.blackolivepineapple.pizza`)
    services:
    - kind: Service
      name: immich-server
      namespace: immich
      port: 2283
  tls:
    certResolver: letsencrypt
